# pandit

./: .bazelrc  .editorconfig  .gitignore  .gitmodules  .pandit.docker.yml  .pandit.yml  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  Vagrantfile  WORKSPACE  bazel-bin  bazel-out  bazel-testlogs  bazel-vagrant  build.Dockerfile  build.rs  docker-compose.yml
bpf/: Cargo.toml
bpf/src/: lib.rs
bzl/: BUILD  ebpf.bzl  embed.bzl
cli/: Cargo.toml
cli/example/: factorial.toml  panditfile.toml  pg_num.toml  postgres.toml  service.toml  test_example.sh  test_postgres.sh
cli/src/: main.rs
docs/: bib.tex  public_abstract.md  terminology.txt
docs/abstract/: abstract.tex
docs/outline/: .gitignore  outline.aux  outline.fdb_latexmk  outline.fls  outline.tex
docs/report/: .gitignore  abstract.tex  bib.bib  main.tex  report.tex
ebpf-src/: xdp_parser.bpf.c
k8s/: debug.yml  deployment.yml  example.yml  redis-config.yml  redis.yml
probes/: .gitignore  Cargo.toml  build.rs
probes/include/: bindings.h
probes/src/: lib.rs
probes/src/entrypoint/: main.rs  mod.rs
src/: CMakeLists.txt  main.cpp  main.rs  xdp_parser.bpf.c
src/api/: mod.rs
src/api/proto/: Cargo.toml  api.proto  api.rs  api_grpc.rs  build.rs  codegen.sh
src/bpf/: .gitignore  BUILD  CMakeLists.txt  mod.rs  parsing_helpers.h  vmlinux.h  xdp_http_parse.c  xdp_parser.bpf.c  xdp_parser.c  xdp_parser.skel.rs
src/bpf/bpf_helpers/: builtins.h  compiler.h  errno.h  str.h
src/bpf/http/: 1.1.h  1.c  1.h  hdr.h
src/bpf/utils/: hash.c  hash.h
src/bpf/xdp/: context_helpers.h  parsing_helpers.h
src/broker/: mod.rs
src/client/: mod.rs
src/config/: mod.rs
src/config/proto/: example.proto  pandit.proto
src/handlers/: json.rs  mod.rs  sql.rs
src/proto/: codegen.sh  example.proto  example.rs  hander.proto  handler.proto  http.proto  http.rs  mod.rs  pandit.proto  pandit.rs
src/proto/examples/: Cargo.toml  Dockerfile  _example.proto  build.rs  example1.proto  example1.rs  example1_grpc.rs  example2.proto  example2.rs  example2_grpc.rs  example_rest.py  factorial.proto  factorial.py  factorial.rs  factorial_grpc.rs  main1.rs  main2.rs  main_demo.rs  postgres_numstore.proto  postgres_numstore.rs  postgres_numstore_grpc.rs
src/proto/format/: http.proto  postgres.proto
src/server/: mod.rs
src/services/: message.rs  mod.rs  value.rs
src/src/: xdp_parser.skel.h
src/writers/: http.rs  mod.rs  postgres.rs
tools/: build_all.sh  build_bpf.sh  build_up.sh  cat.sh  dump.sh  dump_asm.sh  gen_vmlinux_h.sh  load_xdp.sh
tools/cmake/: FindBpfObject.cmake  FindLibBpf.cmake
vmlinux/: vmlinux.h
