[package]
name = "pandit"
version = "0.1.0"
authors = ["Peter Parkanyi <p@symmetree.dev>", "Junyeong Jeong <rhdxmr@gmail.com>"]
edition = "2018"
repository = "https://github.com/foniod/redbpf"
description = "Example probes for redBPF"
license = "MIT OR Apache-2.0"
keywords = ["bpf", "ebpf", "build", "bindgen", "redbpf"]
publish = false

[dependencies]
access-json = "0.1.0"
clap = "2.34.0"
config = "0.11.0"
tonic = "0.6.2"
h2 = "0.3"
num = "0.4"
libc = "0.2"
tower = "0.4.11"
hyper = "0.14.6"
tonic-reflection = "0.2.0"
bytes = "1.1.0"
http = "0.2.6"
tokio = { version = "^1.0.1", features = ["rt", "signal", "time", "io-util", "net", "sync"] }
tokio-test = "0.4.2"
parameterized = "0.3.1"
futures = "0.3"
tracing = "0.1.26"
async-trait = "0.1.52"
serde_json = "1.0"
tracing-subscriber = "0.3.2"
serde-protobuf = "0.8.2"
serde = "1.0.133"
httparse = "1.5.1"
dashmap = "4.0.2"
protobuf = { git = "https://github.com/stepancheg/rust-protobuf.git", tag="v3.0.0-alpha.2", features = ["with-serde"] }
protoc-rust = "2.25.2"
protobuf-parse = { git = "https://github.com/stepancheg/rust-protobuf.git", tag="v3.0.0-alpha.2" }
redis = { version = "0.21.5", features = [ "cluster"] }
grpcio = "0.9.1"

[[bin]]
name = "pandit"
path = "src/main.rs"
required-features = ["kernel5_8"]  # bpf iterator has been supported since kernel v5.8

[features]
kernel5_8 = []
with-serde = ["protobuf/with-serde"]

# [workspace]
# members = ["probes"]