[package]
name = "pandit"
version = "1.0.0"
authors = ["Peter Parkanyi <p@symmetree.dev>", "Junyeong Jeong <rhdxmr@gmail.com>"]
edition = "2018"
repository = "https://github.com/foniod/redbpf"
description = "Example probes for redBPF"
license = "MIT OR Apache-2.0"
keywords = ["bpf", "ebpf", "build", "bindgen", "redbpf"]
publish = false

[dependencies]
access-json = "0.1.0"
api_proto = { path = "./src/api/proto", package = "api" }
bollard = "0.11"
get_if_addrs = "0.5.3"
clap = { version = "3.1.2", features = ["derive"] }
hostname = "0.3.1"
kube = { version = "0.69.0", default-features = false, features = ["runtime", "derive", "client", "rustls-tls"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
log = "0.4.11"
config = "0.11.0"
crossbeam-channel = "0.5.2"
tonic = "0.6.2"
h2 = "0.3"
tower-test = "0.4.0"
num = "0.4"
libc = "0.2"
tower = "0.4.11"
hyper = { version = "0.14", features = ["full"] }
grpcio = "0.9.1"
tempfile = "3.3.0"
bytes = "1.1.0"
http = "0.2.6"
tokio = { version = "^1.0.1", features = ["rt", "signal", "time", "io-util", "net", "sync"] }
console = "0.15.0"
tokio-test = "0.4.2"
parameterized = "0.3.1"
futures = "0.3"
tracing = "0.1.26"
async-trait = "0.1.52"
serde_json = "1.0"
tracing-subscriber = "0.3.2"
serde-protobuf = "0.8.2"
serde = { version = "1.0.133", features = ["rc"] }
httparse = "1.5.1"
dashmap = { version = "4.0.2", features = ["serde"] }
protobuf = { git = "https://github.com/stepancheg/rust-protobuf.git", tag="v3.0.0-alpha.2", features = ["with-serde"] }
protoc-rust = "2.25.2"
protobuf-parse = { git = "https://github.com/stepancheg/rust-protobuf.git", tag="v3.0.0-alpha.2" }
redis = { version = "0.21.5", features = [ "cluster", "tokio-comp"] }

[[bin]]
name = "panditd"
path = "src/main.rs"

[features]
with-serde = ["protobuf/with-serde"]

# [workspace]
# members = ["probes"]