[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_proto = { path = "../src/api/proto", package = "api" }
grpcio = "0.9.1"
config = "0.12.0"
clap = { version = "3.1.2", features = ["derive"] }

[[bin]]
name = "pandit"
path = "src/main.rs"
