[package]
name = "cli"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_proto = { path = "../src/api/proto", package = "api" }
grpcio = "0.10.0"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
config = "0.12.0"
clap = { version = "3.1.2", features = ["derive"] }
serde = { version = "1.0.133", features = ["rc"] }
serde_json = "1.0.79"
bytes = "1.1.0"
indicatif = "0.16.2"
console = "0.15.0"
tokio = { version = "1.17.0", features = ["full"] }


[[bin]]
name = "pandit"
path = "src/main.rs"
