[package]
name = "probes"
version = "0.1.0"
edition = '2018'

[dependencies]
cty = "0.2"
redbpf-macros = "2.1.0"
redbpf-probes = "2.1.0"

[build-dependencies]
cargo-bpf = { version = "2.1.0", default-features = false }

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "entrypoint"
path = "src/entrypoint/main.rs"
required-features = ["probes"]
