[package]
name = "probes"
version = "0.1.0"
edition = '2018'

[dependencies]
cty = "0.2"
redbpf-macros = { version = "2.2.0", path = "../redbpf/redbpf-macros" }
redbpf-probes = { version = "2.2.0", path = "../redbpf/redbpf-probes" }

[build-dependencies]
cargo-bpf = { version = "2.2.0", path = "../redbpf/cargo-bpf", default-features = false, features = ["llvm13", "bindings"] }
tracing = "0.1.26"
tracing-subscriber = "0.3.2"
bpf-sys = { version = "2.2.0", path = "../redbpf/bpf-sys" }

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "entrypoint"
path = "src/entrypoint/main.rs"
required-features = ["probes"]
