[package]
name = "probes"
version = "0.1.0"
edition = '2018'

[dependencies]
cty = "0.2"
redbpf-macros = "2.2.0"
redbpf-probes = "2.2.0"

[build-dependencies]
cargo-bpf = { version = "2.2.0", default-features = false, features = ["llvm13", "bindings"] }
tracing = "0.1.26"
tracing-subscriber = "0.3.2"
bpf-sys = "2.2.0"

[features]
default = []
probes = []
# kernel5_8 = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "entrypoint"
path = "src/entrypoint/main.rs"
required-features = ["probes"]
